syntax = "proto3";

package user;
option go_package="./user";

message UserInfo {
  int64 id = 1;
  string user_name = 2;
  string nick_name = 3;
  string avatar = 4;
  string email = 5;
  string phone = 6;
  int32 status = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
}

message GetUserInfoReq {}

message GetUserInfoResp {
  UserInfo info = 1;
 }

 message UserListReq {
   int64 page = 1;
   int64 page_size = 2;
 }

 message UserListResp {
   int64 total = 1;
   repeated UserInfo list = 2;
 }

service User {
  rpc GetUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
  rpc UserList(UserListReq) returns(UserListResp);
}
